[voice] Refactor to record & Add deserialization support
Signed-off-by: Florian Hotze <dev@florianhotze.com>